# adaptive-thresholding

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  vcpkg.json
cmake/: CMakeLists.txt  longlp_desired_compile_options.cmake
data/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/base/: CMakeLists.txt  crtp.cpp  crtp.hpp  type_traits.cpp  type_traits.hpp
src/imgproc/: .clang-tidy  CMakeLists.txt  imgproc.cpp  imgproc.hpp
src/imgproc/binarization/: bernsen.cpp  bernsen.hpp  binarization.cpp  binarization.hpp  binarization_algorithm.cpp  binarization_algorithm.hpp  binarization_base.cpp  binarization_base.hpp  binarization_validator.cpp  binarization_validator.hpp  niblack.cpp  niblack.hpp  otsu.cpp  otsu.hpp  sauvola.cpp  sauvola.hpp
src/imgproc/common/: constant.cpp  constant.hpp  integral_image_calculator.cpp  integral_image_calculator.hpp
tools/vscode/: c_cpp_properties.json.example  settings.json.example  snippets.code-snippets.example
